pods.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"labels":{"name":"external"},"name":"external","namespace":"default"},"spec":{"containers":[{"env":[{"name":"APP_NAME","value":"External Facing Application"},{"name":"BG_COLOR","value":"red"}],"image":"kodekloud/webapp-conntest","name":"external","ports":[{"containerPort":8080}]}]}}
  labels:
    name: external
  name: external
  namespace: default
spec:
  containers:
  - env:
    - name: APP_NAME
      value: External Facing Application
    - name: BG_COLOR
      value: red
    image: kodekloud/webapp-conntest
    imagePullPolicy: Always
    name: external
    ports:
    - containerPort: 8080
      protocol: TCP

---

apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"labels":{"name":"internal"},"name":"internal","namespace":"default"},"spec":{"containers":[{"env":[{"name":"APP_NAME","value":"Internal Facing Application"},{"name":"BG_COLOR","value":"blue"}],"image":"kodekloud/webapp-conntest","name":"internal","ports":[{"containerPort":8080}]}]}}
  labels:
    name: internal
  name: internal
  namespace: default
spec:
  containers:
  - env:
    - name: APP_NAME
      value: Internal Facing Application
    - name: BG_COLOR
      value: blue
    image: kodekloud/webapp-conntest
    imagePullPolicy: Always
    name: internal
    ports:
    - containerPort: 8080
      protocol: TCP

---

apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"labels":{"name":"mysql"},"name":"mysql","namespace":"default"},"spec":{"containers":[{"env":[{"name":"MYSQL_ROOT_PASSWORD","value":"paswrd"}],"image":"mysql","name":"mysql","ports":[{"containerPort":3306}]}]}}
  labels:
    name: mysql
  name: mysql
  namespace: default
spec:
  containers:
  - env:
    - name: MYSQL_ROOT_PASSWORD
      value: paswrd
    image: mysql
    imagePullPolicy: Always
    name: mysql
    ports:
    - containerPort: 3306
      protocol: TCP

---

apiVersion: v1
kind: Pod
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Pod","metadata":{"annotations":{},"labels":{"name":"payroll"},"name":"payroll","namespace":"default"},"spec":{"containers":[{"env":[{"name":"APP_NAME","value":"Payroll Application"},{"name":"BG_COLOR","value":"blue"}],"image":"kodekloud/webapp-conntest","name":"payroll","ports":[{"containerPort":8080}]}]}}
  labels:
    name: payroll
  name: payroll
  namespace: default
spec:
  containers:
  - env:
    - name: APP_NAME
      value: Payroll Application
    - name: BG_COLOR
      value: blue
    image: kodekloud/webapp-conntest
    imagePullPolicy: Always
    name: payroll
    ports:
    - containerPort: 8080
      protocol: TCP
