service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"db-service","namespace":"default"},"spec":{"ports":[{"port":3306,"targetPort":3306}],"selector":{"name":"mysql"}}}
  name: db-service
  namespace: default
spec: 
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    name: mysql
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"external-service","namespace":"default"},"spec":{"ports":[{"nodePort":30080,"port":8080,"targetPort":8080}],"selector":{"name":"external"},"type":"LoadBalancer"}} 
  name: external-service
  namespace: default
spec: 
  ports:
  - nodePort: 30080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: external
  sessionAffinity: None
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"internal-service","namespace":"default"},"spec":{"ports":[{"nodePort":30082,"port":8080,"targetPort":8080}],"selector":{"name":"internal"},"type":"LoadBalancer"}}
  name: internal-service
  namespace: default
spec: 
  ports:
  - nodePort: 30082
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: internal
  sessionAffinity: None
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"internal-service","namespace":"default"},"spec":{"ports":[{"nodePort":30082,"port":8080,"targetPort":8080}],"selector":{"name":"internal"},"type":"NodePort"}} 
  name: payroll-service
  namespace: default
spec: 
  ports:
  - nodePort: 30083
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    name: payroll
  sessionAffinity: None
  type: NodePort
